<resources>
    <string name="app_name">Life Under The Sea</string>
    <string name="logout">Logout</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_camera">Camera</string>
    <string name="title_search">Search</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_user_name">Hello, user</string>
    <string name="title_xp">XP</string>
    <string name="title_app">Explore the sea!</string>
    <string name="description">This is a shark</string>
    <string name="animal">Animal:</string>
    <string name="profile_pic">profile_picture</string>
    <string name="profile_name">Name : (empty)</string>
    <string name="profile_level">Level : (empty)</string>
    <string name="profile_XP">XP : (empty)</string>
    <string name="name_update">Update Name</string>
    <string name="edit_name">Name</string>
    <string name="quiz_content">Please Choose the quiz you like</string>
    <string name="quiz1">Quiz1(clickable)</string>
    <string name="quiz2">Quiz2</string>
    <string name="quiz3">Quiz3</string>
    <string name="question_Num">Q1</string>
    <string name="question">Who is the most beautiful girl in the world?</string>
    <string name="buttonA">Me</string>
    <string name="buttonB">It must be Me</string>
    <string name="buttonC">Always Me</string>
    <string name="buttonD">Completely Me</string>
    <string name="question_correct">Correct !!!</string>
    <string name="buttonNext">Next</string>
    <string name="camera">Camera</string>
    <string name="search">Search</string>
    <string name="quiz">Quiz</string>
</resources>
