<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="315dp"
        android:layout_height="127dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/cardview_light_background">

        <TextView
            android:id="@+id/quiz_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginBottom="65dp"
            android:fontFamily="@font/smart_kid"
            android:text="@string/question"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="413dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorWhite">

        <Button
            android:id="@+id/buttonC"
            android:layout_width="319dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginEnd="49dp"
            android:layout_marginRight="49dp"
            android:layout_marginBottom="119dp"
            android:background="@drawable/round_corner_option"
            android:fontFamily="@font/smart_kid"
            android:text="@string/buttonC"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonD"
            android:layout_width="319dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="19dp"
            android:background="@drawable/round_corner_option"
            android:fontFamily="@font/smart_kid"
            android:text="@string/buttonD"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="319dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="43dp"
            android:layout_marginLeft="43dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="216dp"
            android:background="@drawable/round_corner_option"
            android:fontFamily="@font/smart_kid"
            android:text="@string/buttonB"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonA"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginBottom="316dp"
            android:background="@drawable/round_corner_option"
            android:fontFamily="@font/smart_kid"
            android:text="@string/buttonA"
            android:textSize="15dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="293dp"
        android:layout_marginRight="293dp"
        android:fontFamily="@font/smart_kid"
        android:text="Q1"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold" />
</RelativeLayout>